fix to overflow issue

--- a/src/modules/portfolio/less/portfolio-navs.less
+++ b/src/modules/portfolio/less/portfolio-navs.less
@@ -1,5 +1,5 @@
 .portfolio-navs {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 
   .portfolio-navs-container {
